[workspace]
members = ["providence-io"]

[package]
name = "providence"
version = "0.1.0"
edition = "2021"
description = "👁"

[dependencies]
providence-io = { path = "providence-io" }
zaru = { git = "ssh://git@github.com/SludgePhD/Zaru.git", rev = "b9431fa3fc8675be5e013fc12b07a67d4e0017ef" }
pawawwewism = "0.1.0"
anyhow = "1.0.69"
tracing = "0.1.40"

[dev-dependencies]
macroquad = "0.4.2"

[profile.dev]
opt-level = 2

#[patch.'ssh://git@github.com/SludgePhD/Zaru.git']
#zaru = { path = "../Zaru/crates/zaru" }

[patch.crates-io]
#pawawwewism = { path = "../Pawawwewism" }
#linuxvideo = { path = "../LinuxVideo" }
#fev = { path = "../FeV" }
#compeg = { path = "../Compeg" }

#wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "54d22a89d33421cce0eae1255aeec9eabbb9ac8e" }

#uwuhi-async = { path = "../uwuhi/uwuhi-async" }
