[workspace]
members = ["providence-io"]

[package]
name = "providence"
version = "0.1.0"
edition = "2021"
description = "👁"

[dependencies]
providence-io = { path = "providence-io" }
zaru = { git = "ssh://git@github.com/SludgePhD/Zaru.git", rev = "8ce433236038ef0d7dc441aa19247604edaf2467" }
pawawwewism = "0.1.0"
anyhow = "1.0.69"
tracing = "0.1.40"

[dev-dependencies]
macroquad = "0.4.12"

[profile.dev]
opt-level = 2

#[patch.'ssh://git@github.com/SludgePhD/Zaru.git']
#zaru = { path = "../Zaru/crates/zaru" }

[patch.crates-io]
#pawawwewism = { path = "../Pawawwewism" }
#linuxvideo = { path = "../LinuxVideo" }
#fev = { path = "../FeV" }
#compeg = { path = "../Compeg" }

#wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "54d22a89d33421cce0eae1255aeec9eabbb9ac8e" }

#uwuhi-async = { path = "../uwuhi/uwuhi-async" }
